<resources>
    <string name="app_name">Qongs</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>

    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    // ContactActivity
    <string name="do_import">Import</string>
    <string name="do_cancel">Cancel</string>
    <string name="select_unselect">Select/unselect all</string>
    // LoginActivity
    <string name="register_btn">Register</string>
    <string name="wrong_data">"Incorrect email or password"</string>
    <string name="action_sign_in">Login</string>
    <string name="buttom_text">© Copyright by Qongs International Ltd.</string>
    <string name="forgot_pass">Forgot password?</string>

    <string name="unknown_error">Unknown error</string>
    <string name="no_connection">No internet connection. Go to offline version.</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="action_ok">OK</string>
    <string name="action_cancel">Cancel</string>
    // AlertDialog on loginActivity
    <string name="send_contacts">Want to add contacts from your phone book to the resource?</string>
    <string name="title_activity_web2">WebActivity2</string>
    // Use this string to AES key encrypt
    <string name="error_0">nQzpNLAuzc44IaHPdhKeiBqnIsW5dPhKUs2pz296</string>
    // Navigation Drawer
    <string name="import_contacts">Import</string>
    <string name="logout">Logout</string>
    <string name="communicate">Communicate</string>
    <string name="read_contact">This app needs access to your contacts.</string>
    <string name="header_title">Navigation</string>
    <string name="nav_track">Track</string>
    <string name="nav_connect">Connect</string>

    //WebActivity
    <string name="app_not_install">You may need install this app first</string>
</resources>
