<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="32dp"
    android:paddingRight="32dp"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.dmitriysamoilov.filipapp.activity.LoginActivity">


    <!-- Login progress -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:orientation="vertical"
        android:paddingTop="30dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/logo" />

        <ProgressBar
            android:progressDrawable="@color/colorBlue"
            android:id="@+id/login_progress"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="8dp"
            android:visibility="gone"
            tools:visibility="visible" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/email_login_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorGreyLight"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/textColor"
            android:layout_marginTop="16dp"
            android:theme="@style/Theme.App.Base">

            <AutoCompleteTextView
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@color/textColor"
                android:theme="@style/Theme.App.Base" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/textColor"
            android:theme="@style/Theme.App.Base">

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_password"
                android:imeActionId="6"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:shadowColor="@color/textColor"
                android:singleLine="true"
                android:textColor="@color/textColor"
                android:theme="@style/Theme.App.Base" />

        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/forgot_pass_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:clickable="true"
            android:paddingStart="8dp"
            android:text="@string/forgot_pass" />

        <Button
            android:id="@+id/email_sign_in_button"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/blue_button"
            android:text="@string/action_sign_in"
            android:textAllCaps="false"
            android:textStyle="bold" />

        <Button
            android:id="@+id/registration_button"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/grey_button"
            android:text="@string/register_btn"
            android:textAllCaps="false" />

    </LinearLayout>

    <TextView

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal|bottom"
        android:text="@string/buttom_text" />
</LinearLayout>
