<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBlack"
    xmlns:tools="http://schemas.android.com/tools">


    <RelativeLayout
        android:background="@color/colorBlack"
        android:layout_margin="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/ca_checkBox"
            android:layout_toEndOf="@+id/ca_checkBox"
            android:text="@string/select_unselect" />

        <CheckBox
            android:id="@+id/ca_checkBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true" />

        <ProgressBar
            android:visibility="visible"
            android:id="@+id/ca_progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:layout_gravity="end" />


    </RelativeLayout>


    <ListView
        android:layout_weight="1"
        android:id="@+id/ca_listView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </ListView>


    <RelativeLayout
        android:layout_margin="16sp"
        android:background="@color/colorBlack"
        android:layout_weight="0"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/ca_cancel"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:background="@drawable/red_button"
            android:padding="8dp"
            android:paddingRight="32dp"
            android:text="@string/action_cancel" />

        <Button
            android:id="@+id/ca_confirmBtn"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:background="@drawable/blue_button"
            android:padding="8dp"
            android:text="@string/do_import" />


    </RelativeLayout>

</LinearLayout>